--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,8 +41,22 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    // ########################
+    // ### Navigation graph ###
+    // ########################
     def nav_version = "2.5.3"
     // Java language implementation
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
+
+    // ################
+    // ### Retrofit ###
+    // ################
+    //for api request
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    //for debugging with retrofit
+    //for logging http request by retrofit
+    // https://stackoverflow.com/questions/69326854/unable-to-load-android-socket-classes-java-lang-nosuchmethodexception-com-andro
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
 }
